fixed layout on safari

--- a/main.less
+++ b/main.less
@@ -57,20 +57,23 @@ html{
 }
 .divider{
 	flex-grow: 1;
-	display: flex;
+	display: -webkit-flex;
 	flex-direction: row;
 }
 .leftPanel{
+	display: -webkit-flex;
 	flex-grow: 1;
 	width: 50%;
-}
-.full{
-	display: flex;
 	flex-direction: column;
-	height: 100%;
+	position: relative;
 }
 .CodeMirror{
-	flex-grow:1;
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+}
+.CodeMirror-scroll{
+	flex-grow: 1;
 }
 .rightPanel{
 	position: relative;
